Completed the tasks functionality. Reconfigured that data architecture to add a myTasks attribute to each user. This improves the performance of the app when querying a single user's tasks. Almost have the dashboard loading all tasks associated to the user. I have an issue when storing the retrieved task in the scope.

--- a/public/css/custom.css
+++ b/public/css/custom.css
@@ -192,6 +192,16 @@ body{
     overflow: hidden;
 }
 
+.panel.completed{
+    color: #ccc;
+    background-color: rgba(242, 240, 240, .50);
+}
+
+.panel.completed .panel-body{
+    border: 1px rgba(242, 240, 240, .50);
+    background-color: transparent;
+}
+
 .clear-panel{
     width: 90%;
     max-width: 500px;
@@ -211,6 +221,7 @@ body{
     border-bottom-left-radius: 5px;
 }
 
+
 .panel-main{
     width: 100%;
 }
@@ -228,6 +239,10 @@ body{
 
 .panel-main.cluttered.secondary{
     font-size: .90em;
+    font-weight: 100;
+    position: relative;
+    top: -20px;
+    height: 23px;
     
 }
 .panel-main.cluttered:last-of-type{
