--- a/public/views/dashboard.html
+++ b/public/views/dashboard.html
@@ -5,8 +5,50 @@
 	=====================================
 -->	
 
-<div class="row" ng-controller="dashboardController">
+<div class="row">
     
     <h1 id="login-logo">Welcome {{user.fname}}</h1>
     
+</div>
+
+<div class="row">
+
+    <div class="panel panel-dropdown" ng-repeat="task in myTasks | filter: {completed: false}" >
+        
+        <div class="panel-head" ng-click="panelOpen = !panelOpen">
+            <p class="panel-main cluttered">{{task.name}}</p>
+            <p class="panel-main cluttered secondary">{{task.members.length}} Members</p>
+        </div>
+        
+        <div class="panel-body" ng-show="panelOpen">
+       
+            <div class="row">
+                <p>
+                    {{task.description}}
+                </p>
+            </div>
+            
+            <div class="row">
+                <button type="submit" class="submit"  ng-click="completeTask(task._id)">
+                    Complete
+                </button>
+            </div>
+            
+            <div class="row">
+                <a ng-href="/#/editTask/{{project._id}}/{{task._id}}"><button type="submit" class="edit" >
+                    Edit
+                </button></a>
+            </div>
+            
+            <div class="row">
+                <button type="submit" class="delete"  ng-click="deleteTask(task._id)">
+                    Delete
+                </button>
+            </div>
+            
+        </div>
+
+
+    </div>
+
 </div>
