--- a/public/views/newTask.html
+++ b/public/views/newTask.html
@@ -32,6 +32,11 @@
                 </div>
                 
                 <div class="row">
+                    <label for="dueTime">Time (Optional):</label>
+                    <input type="time" name="dueTime" ng-model="task.dueTime">
+                </div>
+                
+                <div class="row">
                     <label for="description">Description:</label>
                     <textarea name="description" ng-model="task.description"></textarea>
                 </div>
