Fixed malfunctioning due date functionality on tasks and projects.

--- a/public/views/newTask.html
+++ b/public/views/newTask.html
@@ -27,8 +27,8 @@
                 </div>
                 
                 <div class="row">
-                    <label for="dueDate">Due by (Optional):</label>
-                    <input type="date" name="dueDate" ng-model="task.dueDate">
+                    <label for="due">Due by (Optional):</label>
+                    <input type="date" name="due" ng-model="task.due">
                 </div>
                 
                 <div class="row">
