--- a/public/views/updateTask.html
+++ b/public/views/updateTask.html
@@ -27,8 +27,13 @@
                 </div>
                 
                 <div class="row">
-                    <label for="dueDate">Due by (Optional):</label>
-                    <input type="date" name="dueDate" ng-model="task.dueDate">
+                    <label for="due">Due by (Optional):</label>
+                    <input type="date" name="due"  ng-model="task.due">
+                </div>
+                
+                <div class="row">
+                    <label for="dueTime">Time (Optional):</label>
+                    <input type="time" name="dueTime" ng-model="task.dueTime">
                 </div>
                 
                 <div class="row">
