--- a/public/views/projects.html
+++ b/public/views/projects.html
@@ -1,4 +1,4 @@
-<div class="row" ng-class="{true: 'pushDown', false: ''}[user.type == 3]">
+<div class="row pushDown" ng-class="{true: 'pushDown', false: ''}[user.type == 3]">
     
     <h1 id="login-logo">{{user.cName}}'s Projects</h1>
     
@@ -6,7 +6,8 @@
 
 <div class="row addButtonRow" ng-show="user.type==1 || user.type==2">
 
-    <a href="/#/newProject" class="addButton">+ NEW PROJECT</a>
+    <a href="/#/newProject" class="addButton right">+ NEW PROJECT</a>
+    <a class="addButton left">Active Projects:</a>
 
 </div>
 
