--- a/public/views/addClient.html
+++ b/public/views/addClient.html
@@ -5,10 +5,16 @@
 	=====================================
 -->	
 
-<div class="row page-header">
+<div class="row page-header pushDown">
     
     <a ng-href="/#/clients"><h1 id="login-logo">Tracing Ink's Clients</h1></a>
     
+</div>
+
+<div class="row addButtonRow">
+
+    <a href="/#/clients" class="addNew close">X</a>
+
 </div>
 
 <div class="row">
