--- a/public/views/dashboard.html
+++ b/public/views/dashboard.html
@@ -13,7 +13,7 @@
 
 <div class="row addButtonRow">
 
-    <a class="addButton left">Active Tasks:</a>
+    <a class="page-header">My Tasks:</a>
 
 </div>
 
