--- a/public/views/inviteMember.html
+++ b/public/views/inviteMember.html
@@ -5,12 +5,17 @@
 	=====================================
 -->	
 
-<div class="row page-header">
+<div class="row page-header pushDown">
     
     <a ng-href="/#/team"><h1 id="login-logo">{{user.cName}}'s Team</h1></a>
     
 </div>
 
+<div class="row addButtonRow">
+
+    <a href="/#/team" class="addNew close">X</a>
+
+</div>
 
 <div class="row">
     
