--- a/public/views/newConversation.html
+++ b/public/views/newConversation.html
@@ -5,10 +5,16 @@
 	=====================================
 -->	
 
-<div class="row page-header">
+<div class="row page-header pushDown">
     
     <a ng-href="/#/conversations"><h1 id="login-logo">My Conversations</h1></a>
     
+</div>
+
+<div class="row addButtonRow">
+
+    <a href="/#/conversations" class="addNew close">X</a>
+
 </div>
 
 <div class="row">
