--- a/public/views/projects.html
+++ b/public/views/projects.html
@@ -6,8 +6,8 @@
 
 <div class="row addButtonRow" ng-show="user.type==1 || user.type==2">
 
-    <a href="/#/newProject" class="addButton right">+ NEW PROJECT</a>
-    <a class="addButton left">Active Projects:</a>
+    <a href="/#/newProject" class="addNew">New Project</a>
+    <a class="page-header">Active Projects:</a>
 
 </div>
 
