--- a/public/views/updateTask.html
+++ b/public/views/updateTask.html
@@ -1,7 +1,7 @@
 
 <!--		
 	====================================
-		 	New Project
+		 	Update Task
 	=====================================
 -->	
 
@@ -9,6 +9,12 @@
     
     <a ng-href="/#/project/{{project._id}}"><h1 id="login-logo">{{project.name}}</h1></a>
     
+</div>
+
+<div class="row addButtonRow">
+
+    <a href="/#/project/{{project._id}}" class="addNew close">X</a>
+
 </div>
 
 <div class="row">
