--- a/public/views/clients.html
+++ b/public/views/clients.html
@@ -5,7 +5,7 @@
 	=====================================
 -->	
 
-<div class="row">
+<div class="row pushDown">
     
     <h1 id="login-logo">Tracing Ink's Clients</h1>
     
@@ -13,7 +13,7 @@
 
 <div class="row addButtonRow">
 
-    <a href="/#/addClient" class="addButton">+ NEW</a>
+    <a href="/#/addClient" class="addButton addNew">New Client</a>
 
 </div>
 
