--- a/public/views/newProject.html
+++ b/public/views/newProject.html
@@ -11,6 +11,12 @@
     
 </div>
 
+<div class="row addButtonRow">
+
+    <a href="/#/projects" class="addNew close">X</a>
+
+</div>
+
 <div class="row">
     
     <div class="panel secured">
