--- a/public/views/projects.html
+++ b/public/views/projects.html
@@ -1,4 +1,4 @@
-<div class="row pushDown" ng-class="{true: 'pushDown', false: ''}[user.type == 3]">
+<div class="row pushDown">
     
     <h1 id="login-logo">{{user.cName}}'s Projects</h1>
     
