--- a/public/views/projects.html
+++ b/public/views/projects.html
@@ -4,7 +4,7 @@
     
 </div>
 
-<div class="row addButtonRow" ng-show="user.type==1 || user.type==2">
+<div class="row addButtonRow">
 
     <a href="/#/newProject" class="addNew">New Project</a>
     <a class="page-header">Active Projects:</a>
