--- a/public/views/projects.html
+++ b/public/views/projects.html
@@ -11,19 +11,50 @@
 
 </div>
 
+
 <div class="row">
 
-    <div class="panel" ng-repeat="project in projects" >
-        <a ng-href="#/project/{{project._id}}" class="project-link">
-            <div class="panel-head">
-                
-                <p class="panel-main halved cluttered">{{project.name}}</p>
-                <p class="panel-main halved right">{{project.dueDate.month}} / {{project.dueDate.day}} / {{project.dueDate.year}}</p>
-                <p class="panel-main cluttered secondary left">{{project.members.length}} Members</p>
-                <p class="panel-main cluttered secondary right">{{project.dueDate.hour}}:{{project.dueDate.minute}} {{project.dueDate.hourFormat}}</p>
-
+    <div class="panel panel-dropdown" ng-repeat="project in projects | filter: {completed: false}" >
+        
+        <div class="panel-head" ng-click="panelOpen = !panelOpen">
+            <p class="panel-main halved cluttered">{{project.name}}</p>
+            <p class="panel-main halved right">{{project.dueDate.month}} / {{project.dueDate.day}} / {{project.dueDate.year}}</p>
+            <p class="panel-main cluttered secondary left">{{project.members.length}} Members</p>
+            <p class="panel-main cluttered secondary right">{{project.dueDate.hour}}:{{project.dueDate.minute}} {{project.dueDate.hourFormat}}</p>
+        </div>
+        
+        <div class="panel-body" ng-show="panelOpen">
+       
+            <div class="row">
+                <p>
+                    {{task.description}}
+                </p>
             </div>
-        </a>
+            
+            <div class="row">
+                <a ng-href="#/project/{{project._id}}" class="project-link">
+                    <button type="submit" class="submit">
+                        View Details
+                    </button>
+                </a>
+            </div>
+            
+            <br>
+            
+            <div class="row">
+                <a ng-href="/#/editProject/{{project._id}}"><button type="submit" class="edit" >
+                    Edit
+                </button></a>
+            </div>
+            
+            <div class="row">
+                <button type="submit" class="delete"  ng-click="completeProject(project._id)">
+                    Complete
+                </button>
+            </div>
+            
+        </div>
+
 
     </div>
 
