--- a/public/views/addClient.html
+++ b/public/views/addClient.html
@@ -33,7 +33,7 @@
                 </div>
                 
                 <div class="row">
-                    <label for="email">Email:</label>
+                    <label for="email">Manager's Email:</label>
                     <input type="email" name="email" ng-model="client.email">
                 </div>
                 
