--- a/public/views/dashboard.html
+++ b/public/views/dashboard.html
@@ -22,10 +22,10 @@
     <div class="panel panel-dropdown" ng-repeat="task in myTasks | filter: {completed: false}" >
         
         <div class="panel-head" ng-click="panelOpen = !panelOpen">
-            <p class="panel-main halved cluttered">{{task.name}}</p>
-            <p class="panel-main halved right">{{task.dueDate.month}} / {{task.dueDate.day}} / {{task.dueDate.year}}</p>
-            <p class="panel-main cluttered secondary left">{{task.projectName}}</p>
-            <p class="panel-main cluttered secondary right">{{task.dueDate.hour}}:{{task.dueDate.minute}} {{task.dueDate.hourFormat}}</p>
+            <p class="panel-main halved cluttered projectName">{{task.name}}</p>
+            <p class="panel-main halved right date">{{task.dueDate.hour}}:{{task.dueDate.minute}} {{task.dueDate.hourFormat}}</p>
+            <p class="panel-main cluttered secondary left members">{{task.projectName}}</p>
+            <p class="panel-main cluttered secondary right time">{{task.dueDate.month}} / {{task.dueDate.day}} / {{task.dueDate.year}}</p>
         </div>
         
         <div class="panel-body" ng-show="panelOpen">
