--- a/public/views/projects.html
+++ b/public/views/projects.html
@@ -43,10 +43,10 @@
     <div class="panel panel-dropdown" ng-repeat="project in projects | filter: {completed: false}" >
         
         <div class="panel-head" ng-click="panelOpen = !panelOpen">
-            <p class="panel-main halved cluttered">{{project.name}}</p>
-            <p class="panel-main halved right">{{project.dueDate.month}} / {{project.dueDate.day}} / {{project.dueDate.year}}</p>
-            <p class="panel-main cluttered secondary left">{{project.members.length}} Members</p>
-            <p class="panel-main cluttered secondary right">{{project.dueDate.hour}}:{{project.dueDate.minute}} {{project.dueDate.hourFormat}}</p>
+            <p class="panel-main cluttered projectName">{{project.name}}</p>
+            <p class="panel-main halved right date">{{project.dueDate.hour}}:{{project.dueDate.minute}} {{project.dueDate.hourFormat}}</p>
+            <p class="panel-main cluttered secondary left members">{{project.members.length}} Members</p>
+            <p class="panel-main cluttered secondary right time">{{project.dueDate.month}} / {{project.dueDate.day}} / {{project.dueDate.year}} </p>
         </div>
         
         <div class="panel-body" ng-show="panelOpen">
