--- a/public/views/singleProject.html
+++ b/public/views/singleProject.html
@@ -5,7 +5,7 @@
     
 </div>
 
-<div class="row pushDown">
+<div class="row pushDown addButtonRow">
         
         <div class="clear-panel ">
         
@@ -64,10 +64,10 @@
     <div class="panel panel-dropdown" ng-repeat="task in tasks | filter: {completed: false}" >
         
         <div class="panel-head" ng-click="panelOpen = !panelOpen">
-            <p class="panel-main halved cluttered">{{task.name}}</p>
-            <p class="panel-main halved right">{{task.dueDate.month}} / {{task.dueDate.day}} / {{task.dueDate.year}}</p>
-            <p class="panel-main cluttered secondary left">{{task.members.length}} Members</p>
-            <p class="panel-main cluttered secondary right">{{task.dueDate.hour}}:{{task.dueDate.minute}} {{task.dueDate.hourFormat}}</p>
+            <p class="panel-main cluttered projectName">{{task.name}}</p>
+            <p class="panel-main halved right date">{{task.dueDate.hour}}:{{task.dueDate.minute}} {{task.dueDate.hourFormat}}</p>
+            <p class="panel-main cluttered secondary left members">{{task.members.length}} Members</p>
+            <p class="panel-main cluttered secondary right time">{{task.dueDate.month}} / {{task.dueDate.day}} / {{task.dueDate.year}}</p>
         </div>
         
         <div class="panel-body" ng-show="panelOpen">
